--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@mlc-ai/web-llm": "^0.2.78"
+    "@mlc-ai/web-llm": "^0.2.78",
+    "ollama": "^0.5.13"
   }
 }
